[package]
name = "cryptopals_rust"
version = "0.1.0"
authors = ["Alex DeFreese <alexdefreese@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
base64 = "0.13.0"
hex = "0.3.0"
im = "15.0.0"
rayon = "1.5.0"